--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <head>
-    <title>AME TODO App</title>
+    <title>Website Constructing</title>
     <link rel="favicon" href="#">
     <link rel="stylesheet" type="text/css" href="./Style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
